@@ -7,6 +7,7 @@
    * viewing the addressbook
    * configuring addressbook subscriptions
    * using a configuration wizard
+   * saving tunnel settings
  * Translation updates
 
 0.9.31 / 2017-08-19
